SubBt/force-app/main/default/objects/Service_Request_Assignee__c/Service_Request_Assignee__c.object-meta.xml
<CustomObject>
    <description>Junction object between Service Request and Assignee</description>
    <label>Service Request Assignee</label>
    <nameField>
        <displayFormat>SRA-{0000}</displayFormat>
        <label>SRA #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request Assignees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>