SubBt/force-app/main/default/objects/Service_Request_Assignee__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Request_Junction</relationshipName>
    <type>Lookup</type>
</CustomField>