SubBt/force-app/main/default/objects/Service_Request_Assignee__c/fields/Secondary__c.field-meta.xml
<CustomField>
    <fullName>Secondary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary</label>
    <type>Checkbox</type>
</CustomField>