SubBt/force-app/main/default/objects/Service_Request_Assignee__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipName>Serive_Request_Assignee</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>