SubBt/force-app/main/default/objects/Service_Request_Assignee__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <label>Unique Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>