SubBt/force-app/main/default/objects/Service_Request_Assignee__c/validationRules/Anyone_checkbox_is_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Anyone_checkbox_is_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Primary__c = true, Secondary__c = true)</errorConditionFormula>
    <errorMessage>Assignee can be either Primary or Secondary.</errorMessage>
</ValidationRule>