SubBt/force-app/main/default/objects/Service_Request_Assignee__c/validationRules/Atleast_one_checkbox_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Atleast_one_checkbox_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Primary__c = false, Secondary__c = false)</errorConditionFormula>
    <errorMessage>At least one checkbox is required to check.</errorMessage>
</ValidationRule>