SubBt/force-app/main/default/objects/Service_Request_Assignee__c/validationRules/Employee_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL(Employee__c),ISBLANK(Employee__c))</errorConditionFormula>
    <errorDisplayField>Employee__c</errorDisplayField>
    <errorMessage>You must enter a value.</errorMessage>
</ValidationRule>