SubBt/force-app/main/default/objects/Service_Request_Assignee__c/validationRules/Only_BT_Service_360_Employees.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_BT_Service_360_Employees</fullName>
    <active>false</active>
    <errorConditionFormula>Employee__r.Profile.Name != &quot;BT Service 360 Employee&quot;</errorConditionFormula>
    <errorDisplayField>Employee__c</errorDisplayField>
    <errorMessage>You must select assignee from  &quot;BT Service 360 Employee&quot; profile.</errorMessage>
</ValidationRule>