SubBt/force-app/main/default/objects/Service_Request_Assignee__c/validationRules/Primary_Not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),Service_Request__r.Primary_Count__c = 1, Primary__c = true)</errorConditionFormula>
    <errorDisplayField>Primary__c</errorDisplayField>
    <errorMessage>Someone has already been assign as &quot;Primary&quot;</errorMessage>
</ValidationRule>